--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "decorator-make",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "exports": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "prepublishOnly": "rm -fr dist && tsc"
+    "build": "rimraf dist && tsc",
+    "prepublishOnly": "npm run build",
+    "t1": "ts-node test/t1",
+    "t2": "npm run build && node test/t2",
+    "test-js": "npm run build && mocha test/*.test.js",
+    "test-ts": "ts-mocha test/*.test.ts",
+    "test": "npm run test-ts && npm run test-js"
   },
   "author": {
     "name": "YeFei",
@@ -24,6 +30,11 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.1",
+    "mocha": "^10.2.0",
+    "rimraf": "^4.1.2",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
