--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,12 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "target": "ES2019",
-    "lib": [
-      "ES2019"
-    ],
+    "lib": [ "ES2019" ],
     "module": "commonjs",
     "strict": true,
-    "strictPropertyInitialization": false,
     "declaration": true,
     "outDir": "./dist"
   },
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ],
-  "include": [
-    "src/**/*"
-  ]
+  "exclude": [ "node_modules" ],
+  "include": [ "src/**/*" ]
 }
