--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decorator-make",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "exports": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "files": [
@@ -30,11 +30,13 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/node": ">=18",
     "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "rimraf": "^4.1.2",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
